[gd_scene load_steps=13 format=3 uid="uid://ddsadip6j3uxu"]

[ext_resource type="Script" uid="uid://bx1jqnfrv4tht" path="res://scripts/game/enemy/weeping_angel_enemy.gd" id="1_y26v5"]
[ext_resource type="Texture2D" uid="uid://bfjly2im2g7j8" path="res://assets/enemy/ISlim.png" id="2_yl7ki"]
[ext_resource type="Script" uid="uid://dgbuaum7kpd0p" path="res://scripts/game/components/knockback_component.gd" id="3_ne5xl"]
[ext_resource type="Script" uid="uid://btduhx2an1ps6" path="res://scripts/game/components/animation_component.gd" id="4_gjs43"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vhjlo"]
radius = 2.9999952
height = 9.999984

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_s4mds"]
radius = 4.0
height = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_y26v5"]
radius = 192.0

[sub_resource type="AtlasTexture" id="AtlasTexture_s4mds"]
atlas = ExtResource("2_yl7ki")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_138c7"]
atlas = ExtResource("2_yl7ki")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iws7p"]
atlas = ExtResource("2_yl7ki")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1cfu5"]
atlas = ExtResource("2_yl7ki")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_n3byp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4mds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_138c7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iws7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1cfu5")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="Weeping Snowman" type="CharacterBody2D" node_paths=PackedStringArray("detection_box", "animation", "health_bar", "knockback_component", "animation_component")]
collision_layer = 7
script = ExtResource("1_y26v5")
detection_box = NodePath("detection_box")
speed = 105.0
animation = NodePath("AnimatedSprite2D")
health_bar = NodePath("ProgressBar")
MAX_HP = 5
knockback_component = NodePath("knockback component")
animation_component = NodePath("animation component")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -1.5707964
shape = SubResource("CapsuleShape2D_vhjlo")
debug_color = Color(0.9744286, 0, 0.43028787, 0.41960785)

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_s4mds")

[node name="detection_box" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_box"]
modulate = Color(0.56733334, 0.92, 0, 1)
shape = SubResource("CircleShape2D_y26v5")
debug_color = Color(0.56733334, 0.92, 0, 0)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -4)
sprite_frames = SubResource("SpriteFrames_n3byp")
frame_progress = 0.98271334

[node name="knockback component" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("3_ne5xl")
knockback = 12.0
knockback_duration = 0.1
actor = NodePath("..")

[node name="animation component" type="Node" parent="." node_paths=PackedStringArray("target_animation")]
script = ExtResource("4_gjs43")
target_animation = NodePath("../AnimatedSprite2D")

[node name="ProgressBar" type="ProgressBar" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = 7.0
offset_right = 90.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.2, 0.2)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 2.0
avoidance_enabled = true

[node name="Timer" type="Timer" parent="NavigationAgent2D"]
wait_time = 0.2
autostart = true

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="NavigationAgent2D/Timer" to="." method="_on_timer_timeout"]
